--- a/data-model/description.adoc
+++ b/data-model/description.adoc
@@ -1,4 +1,4 @@
-.CDM observation_type
+.CDM observation_type: placeholder
 |===
 |Property|Requirement|Description
 
@@ -8,12 +8,22 @@
 |required|Short name for observation type
 |``description``
 |required|Description of observation type
-|``link``
-|optional|Link to definition of observation type
+|``links``
+|optional|Link(s) to definition of observation type
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
 
 |===
 
-.CDM feature_type
+.CDM facility_type: WMDS facility type, type of observing facility
 |===
 |Property|Requirement|Description
 
@@ -23,23 +33,101 @@
 |required|Short name for feature type
 |``description``
 |required|Description of feature type
-|``link``
-|optional|Link to definition of feature type
+|``links``
+|optional|Link(s) to definition of feature type
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
 
 |===
 
-.CDM users
+.CDM feature_type: placeholder
 |===
 |Property|Requirement|Description
 
 |``id``
 |required|ID / primary key
 |``name``
-|required|Name of user
+|required|Short name for feature type
+|``description``
+|required|Description of feature type
+|``links``
+|optional|Link(s) to definition of feature type
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
 
 |===
 
-.CDM observed_property
+.CDM wmo_region: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|required|ID / primary key
+|``name``
+|required|Short name for feature type
+|``description``
+|required|Description of feature type
+|``links``
+|optional|Link(s) to definition of feature type
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
+
+|===
+
+.CDM territory: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|required|ID / primary key
+|``ISO3c``
+|required|ID / primary key
+|``name``
+|required|Short name for feature type
+|``description``
+|required|Description of feature type
+|``wmo_region_id``
+|optional|WMO region that represents the territory
+|``links``
+|optional|Link(s) to definition of feature type
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
+
+|===
+
+.CDM observed_property: placeholder
 |===
 |Property|Requirement|Description
 
@@ -53,12 +141,22 @@
 |required|Canonical units, e.g. 'Kelvin'
 |``description``
 |required|Description of observed property
-|``link``
-|optional|Link to definition / source of observed property
+|``links``
+|optional|Link(s) to definition / source of observed property
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
 
 |===
 
-.CDM observing_procedure
+.CDM observing_procedure: placeholder
 |===
 |Property|Requirement|Description
 
@@ -68,12 +166,22 @@
 |required|Name of observing procedure
 |``description``
 |required|Description of observing procedure
-|``link``
-|optional|Link to further information
+|``links``
+|optional|Link(s) to further information
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
 
 |===
 
-.CDM record_status
+.CDM status: placeholder
 |===
 |Property|Requirement|Description
 
@@ -83,10 +191,129 @@
 |required|Short name for status
 |``description``
 |required|Description of the status
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
 
 |===
 
-.CDM hosts
+.CDM time_zone: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|required|ID / primary key
+|``abbreviation``
+|required|Abbreviation for time zone
+|``name``
+|required|Name / description of timezone
+|``offset``
+|required|Offset from UTC (hours)
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
+
+|===
+
+.CDM source_type: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|required|ID / primary key
+|``name``
+|required|Name of source type
+|``description``
+|required|Description of source type, e.g. file etc
+|``scheme``
+|optional|IANA scheme (if applicable)
+|``links``
+|optional|Links proviing further definition of source type
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
+
+|===
+
+.CDM user: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|required|ID / primary key
+|``name``
+|required|Name of user/agent
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
+
+|===
+
+.CDM media: store for digital media, e.g. photos, reports, videos, etc
+|===
+|Property|Requirement|Description
+
+|``id``
+|optional|
+|``media_type_id``
+|optional|
+|``description``
+|optional|
+|``created``
+|optional|
+|``creator``
+|optional|
+|``rights``
+|optional|
+|``source``
+|optional|
+|``data``
+|optional|
+
+|===
+
+.CDM media_type: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|optional|
+|``name``
+|optional|
+|``description``
+|required|Type of media uploaded
+
+|===
+
+.CDM host: wmdr.observing_facility
 |===
 |Property|Requirement|Description
 
@@ -96,40 +323,253 @@
 |required|Preferred name of host
 |``description``
 |optional|Description of host
-|``link``
+|``links``
 |optional|URI to host, e.g. to OSCAR/Surface
 |``location``
 |optional|Location of station
 |``elevation``
-|optional|Elevation of station above mean sea level
+|optional|Elevation of station above mean sea level in meters
 |``wigos_station_identifier``
 |optional|WIGOS station identifier
-|``facility_type``
+|``facility_type_id``
 |optional|Type of observing facility, fixed land, mobile sea, etc
 |``date_established``
 |optional|Date host was first established
-|``wmo_region``
+|``date_closed``
+|optional|Date host was first established
+|``wmo_region_id``
 |optional|WMO region in which the host is located
-|``territory``
+|``territory_id``
 |optional|Territory the host is located in
+|``time_zone_id``
+|optional|Time zone the host is located in
 |``valid_from``
 |optional|Date from which the details for this record are valid
 |``valid_to``
 |optional|Date after which the details for this record are no longer valid
-|``version``
+|``_version``
 |required|Version number of this record
-|``change_date``
+|``_change_date``
 |required|Date this record was changed
-|``user``
-|required|Which user last modified this record
-|``status``
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
 |required|Whether this is the latest version or an archived version of the record
 |``comments``
 |required|Free text comments on this record, for example description of changes made etc
 
 |===
 
-.CDM observers
+.CDM host_environment: Description of the environment at the specified host
+|===
+|Property|Requirement|Description
+
+|``id``
+|required|Primary key for this record
+|``host_id``
+|required|Host associated with this record
+|``climate_zone_id``
+|optional|Climate zone that the associated host is located in
+|``surface_cover_id``
+|optional|Type of sueface cover
+|``surface_roughness_id``
+|optional|Typical surface roughness of the site surrounding the host
+|``topography_id``
+|optional|Topography of the environment surrounding the host
+|``season_id``
+|optional|Season that is applicable to this record (e.g. all, winter, spring, summer, autumn)
+|``valid_from``
+|optional|Date the this record is valid from
+|``valid_to``
+|optional|date that this record is valid to
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
+
+|===
+
+.CDM climate_zone: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|optional|
+|``name``
+|optional|
+|``description``
+|required|
+
+|===
+
+.CDM surface_cover: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|optional|
+|``name``
+|optional|
+|``description``
+|required|
+
+|===
+
+.CDM surface_roughness: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|optional|
+|``name``
+|optional|
+|``description``
+|required|
+
+|===
+
+.CDM topography: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|optional|
+|``name``
+|optional|
+|``description``
+|required|
+
+|===
+
+.CDM season: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|optional|
+|``name``
+|optional|
+|``description``
+|required|
+
+|===
+
+.CDM host_affiliation: Which programs this host is affiliated with
+|===
+|Property|Requirement|Description
+
+|``id``
+|required|Primary key for this record
+|``host_id``
+|required|Host described by this record
+|``programme_id``
+|optional|Observing programme that this host is affiliated with
+|``valid_from``
+|optional|Date from which the details for this record are valid
+|``valid_to``
+|optional|Date after which the details for this record are no longer valid
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
+
+|===
+
+.CDM programme: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|optional|
+|``name``
+|optional|
+|``description``
+|required|
+
+|===
+
+.CDM host_alias: table to track known aliases for hosts
+|===
+|Property|Requirement|Description
+
+|``id``
+|required|Primary key for this record
+|``host_id``
+|required|Primary ID by which the host is known
+|``alternative_id``
+|optional|Alternative ID by which the host is known
+|``alternative_name``
+|optional|Alternative name by which the host is known
+|``valid_from``
+|optional|Date the alternative id/name was used from
+|``valid_to``
+|optional|Date the alternative id/name was used to
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
+
+|===
+
+.CDM host_responsible_party: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|optional|
+|``user_id``
+|optional|
+|``description``
+|required|Description of role with this association. Note: this will be changed to a code table
+
+|===
+
+.CDM host_media: Link table between hosts and media
+|===
+|Property|Requirement|Description
+
+|``id``
+|required|Primary key for this record
+|``host_id``
+|optional|
+|``media_id``
+|optional|
+|``valid_from``
+|optional|
+|``valid_to``
+|optional|
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
+
+|===
+
+.CDM observer: wmdr.equipment
 |===
 |Property|Requirement|Description
 
@@ -139,16 +579,145 @@
 |required|Name of sensor
 |``description``
 |required|Description of sensor
-|``link``
-|optional|Link to further information
+|``links``
+|optional|Link(s) to further information
 |``location``
 |optional|Location of observer
 |``elevation``
 |optional|Elevation of observer above mean sea level
+|``manufacturer``
+|optional|Make, or manufacturer, of sensor
+|``model``
+|optional|Model of sensor
+|``serial_number``
+|optional|Serial number of sensor
+|``firmware_version``
+|optional|Firmware version of software installed in sensor
+|``control_schedule_id``
+|optional|Link to information on calibration schedule and details
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
 
 |===
 
-.CDM collections
+.CDM control_schedule: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|optional|
+|``name``
+|optional|
+|``description``
+|required|Description of control schedule
+
+|===
+
+.CDM observer_characteristics: Table to record sensor specifications
+|===
+|Property|Requirement|Description
+
+|``id``
+|required|Primary key for this record
+|``observer_id``
+|required|The observer to which this record applies
+|``observed_property_id``
+|optional|The observed parameter to which this record applies
+|``observing_method_id``
+|optional|Primary method/principles by which the sensor makes measurements
+|``measurement_units``
+|optional|The units used in this record
+|``drift_per_unit_time``
+|optional|Sensor drift per unit time, units specified by measurement units, unit time by unit time
+|``unit_time``
+|optional|Unit time for drift per unit time (seconds)
+|``valid_min``
+|optional|Minimum observable value by sensor, in units specificed by measurement units
+|``valid_max``
+|optional|Maximum observable value by sensor, in units specificed by measurement units
+|``measurement_uncertainty``
+|optional|Measurement uncertainty for measurements from this sensor, 2 sigma. Units as per measuremenet units
+|``measurement_accuracy``
+|optional|Measurement accuracy (trueness) for measurements from this sensor, 2 sigma. Units as per measuremenet units
+|``measurement_repeatability``
+|optional|Measurement repeatability (precision) for measurements from this sensor, 2 sigma. Units as per measuremenet units
+|``measurement_resolution``
+|optional|Minimum change detectable for measurements from this sensor. Units as per measurement units
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
+
+|===
+
+.CDM observing_method: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|optional|
+|``name``
+|optional|
+|``description``
+|required|Description of observing method
+
+|===
+
+.CDM observer_responsible_party: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|optional|
+|``user_id``
+|optional|
+|``description``
+|required|Description of role with this association. Note: this will be changed to a code table
+
+|===
+
+.CDM observer_media: Link table between hosts and media
+|===
+|Property|Requirement|Description
+
+|``id``
+|required|Primary key for this record
+|``observer_id``
+|optional|
+|``media_id``
+|optional|
+|``valid_from``
+|optional|
+|``valid_to``
+|optional|
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
+
+|===
+
+.CDM collection: placeholder
 |===
 |Property|Requirement|Description
 
@@ -156,35 +725,57 @@
 |required|ID / primary key
 |``name``
 |required|Name of collection
-|``link``
-|optional|Link to further information on collection
+|``links``
+|optional|Link(s) to further information on collection
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
 
 |===
 
-.CDM features
+.CDM feature: table to contain definition of different geographic features
 |===
 |Property|Requirement|Description
 
 |``id``
 |required|ID / primary key
-|``type``
-|required|enumerated feature type
-|``geometry``
-|required|
-|``elevation``
-|optional|Elevation of feature above mean sea level
-|``parent``
-|optional|Parent feature for this feature if nested
 |``name``
 |optional|Name of feature
 |``description``
 |optional|Description of feature
-|``link``
-|optional|Link to further information on feature
+|``links``
+|optional|Link(s) to further information on feature
+|``feature_type_id``
+|required|enumerated feature type
+|``geometry``
+|required|
+|``elevation``
+|optional|Meam elevation of feature above mean sea level
+|``parent_id``
+|optional|Parent feature for this feature if nested
+|``properties``
+|optional|Array of named values consistent with that defined for the feature type
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
 
 |===
 
-.CDM source
+.CDM source: placeholder
 |===
 |Property|Requirement|Description
 
@@ -192,12 +783,28 @@
 |required|ID / primary key
 |``name``
 |required|Name of source
-|``link``
-|optional|Link to further information on source
+|``description``
+|required|Description of source type, e.g. file etc
+|``source_type_id``
+|required|The type of source
+|``links``
+|optional|Link(s) to further information on source
+|``processor``
+|optional|Name of processor used to ingest the data
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
 
 |===
 
-.CDM observations
+.CDM observation: table to store observations
 |===
 |Property|Requirement|Description
 
@@ -206,8 +813,8 @@
 |``location``
 |required|Location of observation
 |``elevation``
-|optional|Elevation of observation above mean sea level
-|``observation_type``
+|optional|Elevation of observation above mean sea level (in meters)
+|``observation_type_id``
 |optional|Type of observation
 |``phenomenon_start``
 |optional|Start time of the phenomenon being observed or observing period, if missing assumed instantaneous with time given by phenomenon_end
@@ -227,34 +834,137 @@
 |optional|Time that the result starts to be valid
 |``valid_to``
 |optional|Time after which the result is no longer valid
-|``host``
-|optional|Host associated with making the observation, equivalent to OGC OMS 'host'
-|``observer``
+|``host_id``
+|required|Host associated with making the observation, equivalent to OGC OMS 'host'
+|``observer_id``
 |optional|Observer associated with making the observation, equivalent to OGC OMS 'observer'
-|``observed_property``
+|``observed_property_id``
 |required|The phenomenon, or thing, being observed
-|``observing_procedure``
+|``observing_procedure_id``
 |optional|Procedure used to make the observation
-|``report_id``
-|optional|Parent report ID, used to link coincident observations together
-|``collection``
-|optional|Primary collection or dataset that this observation belongs to
+|``collection_id``
+|optional|Primary collection or dataset that this observation belongs to. Note: this is different to the OGC OMS collection concept.
 |``parameter``
 |optional|List of key/ value pairs in dict
-|``feature_of_interest``
-|optional|Feature that this observation is associated with
-|``version``
+|``feature_id``
+|optional|Feature of interest that this observation is associated with
+|``_version``
 |required|Version number of this record
-|``change_date``
+|``_change_date``
 |required|Date this record was changed
-|``user``
-|required|Which user last modified this record
-|``status``
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
 |required|Whether this is the latest version or an archived version of the record
 |``comments``
 |required|Free text comments on this record, for example description of changes made etc
-|``source``
+|``_source_id``
 |required|The source of this record
+|``_source_identifier``
+|required|The original identifier for the record from the data source
+
+|===
+
+.CDM deployment: Table to track deployments of an observer to a host
+|===
+|Property|Requirement|Description
+
+|``id``
+|required|Unique ID / primary key for deployment
+|``host_id``
+|optional|
+|``observer_id``
+|optional|
+|``valid_from``
+|optional|
+|``valid_to``
+|optional|
+|``installation_height``
+|optional|Installation height above reference surface (in meters)
+|``reference_surface``
+|optional|
+|``exposure``
+|optional|
+|``configuration``
+|optional|Textual description of sensor installation and configuration
+|``maintenance_schedule_id``
+|optional|
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
+
+|===
+
+.CDM maintenance_schedule: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|optional|
+|``name``
+|optional|
+|``description``
+|required|Description of maintenance schedule
+
+|===
+
+.CDM exposure: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|optional|
+|``name``
+|optional|
+|``description``
+|required|Description of sensor exposure according to WMO-No. 8
+
+|===
+
+.CDM reference_surface: placeholder
+|===
+|Property|Requirement|Description
+
+|``id``
+|optional|
+|``name``
+|optional|
+|``description``
+|required|Description of reference surface
+
+|===
+
+.CDM deployment_media: Link table between hosts and media
+|===
+|Property|Requirement|Description
+
+|``id``
+|required|Primary key for this record
+|``deployment_id``
+|optional|
+|``media_id``
+|optional|
+|``valid_from``
+|optional|
+|``valid_to``
+|optional|
+|``_version``
+|required|Version number of this record
+|``_change_date``
+|required|Date this record was changed
+|``_user_id``
+|required|Which user/agent last modified this record
+|``_status_id``
+|required|Whether this is the latest version or an archived version of the record
+|``comments``
+|required|Free text comments on this record, for example description of changes made etc
 
 |===
 
